tests/invalid/borrow_conflict/affine_root_move_while_shared_borrowed.facet
fn f(x: affine isize) -> unrestricted () {
    let r: unrestricted &affine isize = (&x) in
    let y: affine isize = x in
    (drop y)
}
